--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
   <nav>
-    <a class="button1" href="#">Plan your Visit</a>
-    <a class="button2" href="#">Learn about the Park</a>
-    <a class="button3" href="#">Get Involved</a>
+    <a class="plan navbutton" href="#">Plan your <br>Visit</a>
+    <a class="learn navbutton" href="#">Learn about <br>the Park</a>
+    <a class="get navbutton" href="#">Get <br>Involved</a>
   </nav>
 
   <header>
@@ -34,23 +34,24 @@
   <section>
     <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="clipart campfire">
     <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the
-      park’s ecosystems. This blog provides updates about fires in Yosemite. <strong>Check for current fire
-        restrictions</strong>.</p>
+      park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span>current fire
+        restrictions</span>.</p>
   </section>
 
   <section>
     <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="clipart RV">
     <p>We strongly recommend that you make
-      reservations for lodging, camping, and backpacking. You can pay the <strong>park entrance fee</strong> upon
+      reservations for lodging, camping, and backpacking. You can pay the <span>park entrance fee</span> upon
       arrival (there's no need to pay it in advance).</p>
   </section>
 
   <footer>
     <img class="footerImage" src="./assets/footer_img.jpg" alt="Yosemite Mountains.">
-
-    <a class="button1" href="#">Plan your Visit</a>
-    <a class="button2" href="#">Learn about the Park</a>
-    <a class="button3" href="#">Get Involved</a>
+    <nav>
+      <a class="plan navbutton" href="#">Plan your <br>Visit</a>
+      <a class="learn navbutton" href="#">Learn about <br>the Park</a>
+      <a class="get navbutton" href="#">Get <br>Involved</a>
+    </nav>
   </footer>
 </body>
 
